<resources>
    <string name="app_name">CocktailsStorage</string>
    <string name="cocktails_item_title">My cocktails</string>
    <string name="empty_cocktails_item_add_cocktail">Add your first cocktail here</string>
    <string name="fragment_cocktails_fab_description">add</string>
    <string name="fragment_add_cocktail_name_hint">Title</string>
    <string name="fragment_add_cocktail_name_placeholder">Cocktail name</string>
    <string name="fragment_add_cocktail_description_hint">Description</string>
    <string name="fragment_add_cocktail_recipe_hint">Recipe</string>
    <string name="fragment_add_cocktail_save_button">Save</string>
    <string name="fragment_add_cocktail_cancel_button">Cancel</string>
    <string name="fragment_add_cocktail_helper_text_optional">Optional field</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_add_ingredient_hint">Ingredient</string>
    <string name="fragment_add_ingredient_name_placeholder">Ingredient\'s name</string>
    <string name="fragment_add_ingredient_title_helperText">Add title</string>
    <string name="fragment_add_ingredient_add_button_text">Add</string>
    <string name="fragment_add_ingredient_header">Add ingredient</string>
    <string name="title_text">Add title</string>
</resources>