<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="328dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="10dp"
    tools:context=".presentation.features.add_cocktail_screen.views.AddIngredientDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fragment_add_ingredient_header"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredientNameInput"
        style="@style/textInputLayout_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/fragment_add_ingredient_hint"
        app:helperText="@string/fragment_add_ingredient_title_helperText"
        app:placeholderText="@string/fragment_add_ingredient_name_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:backgroundTint="@color/custom_blue"
        android:text="@string/fragment_add_ingredient_add_button_text"
        app:cornerRadius="80dp"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/fragment_add_cocktail_cancel_button"
        android:textColor="@color/custom_blue"
        app:cornerRadius="80dp"
        app:strokeColor="@color/custom_blue"
        app:strokeWidth="1dp" />

</LinearLayout>