<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="30dp">

    <ImageView
        android:id="@+id/emptyPageImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/empty_page_image"
        app:layout_constraintBottom_toTopOf="@id/myCocktailsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myCocktailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/cocktails_item_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/addCocktailGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyPageImage" />

    <LinearLayout
        android:id="@+id/addCocktailGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center_horizontal"
            android:lines="2"
            android:maxWidth="100dp"
            android:text="@string/empty_cocktails_item_add_cocktail"
            android:textColor="@color/custom_gray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:src="@drawable/arrow" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addCocktailButton"
            style="@style/addFab_custom"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|center"
            android:contentDescription="@string/fragment_cocktails_fab_description"
            android:src="@drawable/add_frame" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>